src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_float_literals-2.snap
---
source: src/regression_tests/parser.rs
description: "5."
---
Term
    [0;95;1m([0m Token
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value = Float [0;97;1m"[0m[0;94;1m5.[0m[0;97;1m"[0m
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
