src/regression_tests/snapshots/nixfmt_rs__regression_tests__parser__regression_has_attr_after_application-2.snap
---
source: src/regression_tests/parser.rs
description: f x y ? a.b
---
MemberCheck
    [0;95;1m([0m Application
        [0;96;1m([0m Application
            [0;93;1m([0m Term
                [0;35m([0m Token
                    [0;36m([0m Ann
                        [0;33m{[0m preTrivia = fromList [0;35;1m[[0m[0;35;1m][0m
                        [0;33m,[0m sourceLine = Pos [0;92;1m1[0m
                        [0;33m,[0m value = Identifier [0;97;1m"[0m[0;94;1mf[0m[0;97;1m"[0m
                        [0;33m,[0m trailComment = Nothing
                        [0;33m}[0m
                    [0;36m)[0m
                [0;35m)[0m
            [0;93;1m)[0m
            [0;93;1m([0m Term
                [0;35m([0m Token
                    [0;36m([0m Ann
                        [0;33m{[0m preTrivia = fromList [0;35;1m[[0m[0;35;1m][0m
                        [0;33m,[0m sourceLine = Pos [0;92;1m1[0m
                        [0;33m,[0m value = Identifier [0;97;1m"[0m[0;94;1mx[0m[0;97;1m"[0m
                        [0;33m,[0m trailComment = Nothing
                        [0;33m}[0m
                    [0;36m)[0m
                [0;35m)[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
        [0;96;1m([0m Term
            [0;93;1m([0m Token
                [0;35m([0m Ann
                    [0;36m{[0m preTrivia = fromList [0;33m[[0m[0;33m][0m
                    [0;36m,[0m sourceLine = Pos [0;92;1m1[0m
                    [0;36m,[0m value = Identifier [0;97;1m"[0m[0;94;1my[0m[0;97;1m"[0m
                    [0;36m,[0m trailComment = Nothing
                    [0;36m}[0m
                [0;35m)[0m
            [0;93;1m)[0m
        [0;96;1m)[0m
    [0;95;1m)[0m
    [0;95;1m([0m
        [0;96;1m([0m Ann
            [0;93;1m{[0m preTrivia = fromList [0;35m[[0m[0;35m][0m
            [0;93;1m,[0m sourceLine = Pos [0;92;1m1[0m
            [0;93;1m,[0m value = TQuestion
            [0;93;1m,[0m trailComment = Nothing
            [0;93;1m}[0m
        [0;96;1m,[0m
            [0;93;1m[[0m Selector Nothing
                [0;35m([0m IDSelector
                    [0;36m([0m Ann
                        [0;33m{[0m preTrivia = fromList [0;35;1m[[0m[0;35;1m][0m
                        [0;33m,[0m sourceLine = Pos [0;92;1m1[0m
                        [0;33m,[0m value = Identifier [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
                        [0;33m,[0m trailComment = Nothing
                        [0;33m}[0m
                    [0;36m)[0m
                [0;35m)[0m
            [0;93;1m,[0m Selector
                [0;35m([0m Just
                    [0;36m([0m Ann
                        [0;33m{[0m preTrivia = fromList [0;35;1m[[0m[0;35;1m][0m
                        [0;33m,[0m sourceLine = Pos [0;92;1m1[0m
                        [0;33m,[0m value = TDot
                        [0;33m,[0m trailComment = Nothing
                        [0;33m}[0m
                    [0;36m)[0m
                [0;35m)[0m
                [0;35m([0m IDSelector
                    [0;36m([0m Ann
                        [0;33m{[0m preTrivia = fromList [0;35;1m[[0m[0;35;1m][0m
                        [0;33m,[0m sourceLine = Pos [0;92;1m1[0m
                        [0;33m,[0m value = Identifier [0;97;1m"[0m[0;94;1mb[0m[0;97;1m"[0m
                        [0;33m,[0m trailComment = Nothing
                        [0;33m}[0m
                    [0;36m)[0m
                [0;35m)[0m
            [0;93;1m][0m
        [0;96;1m)[0m :| [0;96;1m[[0m[0;96;1m][0m
    [0;95;1m)[0m
